# ensure-project-acl

./: .gitignore  README.md  log.py  main.py  policy.example.yaml  pyproject.toml  synoacl.py
src/ensure_project_acl/: main.py  synoacl.py
