[project]
name = "ensure-project-acl"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "pyyaml"
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
]

[project.scripts]
ensure-project-acl = "ensure_project_acl.main:main"

[tool.uv]
package = true

[tool.ruff.lint]
select = ["E"]

[tool.ruff.lint.pycodestyle]
# E302: Expected 2 blank lines between functions
# E303: Too many blank lines (prevents extra lines inside functions)
max-doc-length = 88